[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "signified"
version = "0.2.6"
dependencies = [
    "pluggy",
    "typing-extensions; python_version < '3.12'"
]
requires-python = ">=3.9"
authors = [
    {name = "Doug Mercer", email = "dougmerceryt@gmail.com"},
]
maintainers = [
    {name = "Doug Mercer", email = "dougmerceryt@gmail.com"},
]
description = "Reactive Signals and Computed values."
readme = "README.md"
license = {file="LICENSE"}
keywords = ["reactive", "signals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]

[tool.setuptools.package-data]
signified = ["py.typed"]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-material-extensions",
]
ipython = ["ipython"]

[project.urls]
Homepage = "https://github.com/dougmercer/signified.git"
Documentation = "https://dougmercer.github.io/signified"
Repository = "https://github.com/dougmercer/signified.git"
Issues = "https://github.com/dougmercer/signified/issues"
Changelog = "https://dougmercer.github.io/signified/changelog"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "docs",
    "envs",
    "htmlcov",
    "results",
    "significant.egg-info",
    "junk",
    ".hypothesis",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=src/ --cov-report=xml --junitxml=junit/test-results.xml"
filterwarnings = [
    "ignore::DeprecationWarning",
]
testpaths = [
	"tests",
    "src"
]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D107"]
